# brot

./: CMakeLists.txt  README.md
cmake/: get_thirdparty.cmake
example/: CMakeLists.txt  indev.cpp
src/brot/: engine.cppm  maths.cppm  window.cppm
